--- a/1-apple-mainpage/src/index.html
+++ b/1-apple-mainpage/src/index.html
@@ -8,7 +8,7 @@
     <title>Apple</title>
 </head>
 <body>
-    <h1>1232</h1>
+    <h1>test</h1>
   <script src="./index.js"></script>
 </body>
 </html>
