begining from header

--- a/1-apple-mainpage/src/index.html
+++ b/1-apple-mainpage/src/index.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>body { margin: 0; padding: 0; } </style>
     <link rel="stylesheet" href="style.css">
     <title>Apple</title>
 </head>
 <body>
-    <h1>test</h1>
+  <header>
+    <nav>
+      <ul class="nav-list">
+        <li class="nav-item">Store</li>
+        <li class="nav-item">Mac</li>
+        <li class="nav-item">iPad</li>
+        <li class="nav-item">iPhone</li>
+        <li class="nav-item">Watch</li>
+        <li class="nav-item">AirPods</li>
+        <li class="nav-item">TV & Дом</li>
+        <li class="nav-item">Entertainment</li>
+        <li class="nav-item">Accessories</li>
+        <li class="nav-item">Support</li>
+      </ul>
+    </div>
+  </header>
+  <main>
+    <section class="header-message-block">
+      <span>Get $200-$630 in credit toward iPhone 14 or iPhone 14 Pro when you trade in iPhone 11 or higher.</p>
+    </section>
+    <section>
+      
+    </section>
+  </main>
   <script src="./index.js"></script>
 </body>
 </html>
