--- a/1-apple-mainpage/src/index.html
+++ b/1-apple-mainpage/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>body { margin: 0; padding: 0; } </style>
     <link rel="stylesheet" href="style.css">
     <title>Apple</title>
 </head>
@@ -12,27 +11,66 @@
   <header>
     <nav>
       <ul class="nav-list">
-        <li class="nav-item">Store</li>
-        <li class="nav-item">Mac</li>
-        <li class="nav-item">iPad</li>
-        <li class="nav-item">iPhone</li>
-        <li class="nav-item">Watch</li>
-        <li class="nav-item">AirPods</li>
-        <li class="nav-item">TV & Дом</li>
-        <li class="nav-item">Entertainment</li>
-        <li class="nav-item">Accessories</li>
-        <li class="nav-item">Support</li>
+        <li class="nav-list__item">Store</li>
+        <li class="nav-list__item">Mac</li>
+        <li class="nav-list__item">iPad</li>
+        <li class="nav-list__item">iPhone</li>
+        <li class="nav-list__item">Watch</li>
+        <li class="nav-list__item">AirPods</li>
+        <li class="nav-list__item">TV & Дом</li>
+        <li class="nav-list__item">Entertainment</li>
+        <li class="nav-list__item">Accessories</li>
+        <li class="nav-list__item">Support</li>
       </ul>
     </div>
   </header>
   <main>
-    <section class="header-message-block">
-      <span>Get $200-$630 in credit toward iPhone 14 or iPhone 14 Pro when you trade in iPhone 11 or higher.</p>
+    <section class="section-ribbon">
+      <span class="section-ribbon__message">Get $200-$630 in credit toward iPhone 14 or iPhone 14 Pro when you trade in iPhone 11 or higher.</p>
     </section>
-    <section>
-      
+    <section class="section-announcement">
+      <div class="section-announcement__tv">
+
+      </div>
+      <div class="section-announcement__iphone14pro">
+
+      </div>
+      <div class="section-announcement__iphone14">
+
+      </div>
+    </section>
+    <section class="block-promo">
+      <div class="block-promo__row">
+        <div class="block-promo__row__elem">
+
+        </div>
+        <div class="block-promo__row__elem">
+
+        </div>
+      </div>
+      <div class="block-promo__row">
+        <div class="block-promo__row__elem">
+
+        </div>
+        <div class="block-promo__row__elem">
+
+        </div>
+      </div>
+      <div class="block-promo__row">
+        <div class="block-promo__row__elem">
+
+        </div>
+        <div class="block-promo__row__elem">
+
+        </div>
+      </div>
     </section>
   </main>
+  <footer>
+    <div class="content-block">
+
+    </div>
+  </footer>
   <script src="./index.js"></script>
 </body>
 </html>
