--- a/1-apple-mainpage/src/index.html
+++ b/1-apple-mainpage/src/index.html
@@ -17,7 +17,7 @@
         <li class="nav-list__item">iPhone</li>
         <li class="nav-list__item">Watch</li>
         <li class="nav-list__item">AirPods</li>
-        <li class="nav-list__item">TV & Дом</li>
+        <li class="nav-list__item">TV & Home</li>
         <li class="nav-list__item">Entertainment</li>
         <li class="nav-list__item">Accessories</li>
         <li class="nav-list__item">Support</li>
@@ -68,7 +68,6 @@
   </main>
   <footer>
     <div class="content-block">
-
     </div>
   </footer>
   <script src="./index.js"></script>
