adding bem methodology

--- a/1-apple-mainpage/src/index.html
+++ b/1-apple-mainpage/src/index.html
@@ -25,49 +25,50 @@
     </div>
   </header>
   <main>
-    <section class="section-ribbon">
-      <span class="section-ribbon__message">Get $200-$630 in credit toward iPhone 14 or iPhone 14 Pro when you trade in iPhone 11 or higher.</p>
+    <section class="ribbon">
+      <span class="ribbon__message">Get $200-$630 in credit toward iPhone 14 or iPhone 14 Pro when you trade in iPhone 11 or higher.</p>
     </section>
-    <section class="section-announcement">
-      <div class="section-announcement__tv">
+    <section class="announcement">
+      <div class="announcement__elem_tv">
 
       </div>
-      <div class="section-announcement__iphone14pro">
+      <div class="announcement__elem_iphone14pro">
 
       </div>
-      <div class="section-announcement__iphone14">
+      <div class="announcement__elem_iphone14">
 
       </div>
     </section>
-    <section class="block-promo">
-      <div class="block-promo__row">
-        <div class="block-promo__row__elem">
+    <section class="promos">
+      <div class="promos__row">
+        <div class="promos__row__promo">
 
         </div>
-        <div class="block-promo__row__elem">
-
-        </div>
-      </div>
-      <div class="block-promo__row">
-        <div class="block-promo__row__elem">
-
-        </div>
-        <div class="block-promo__row__elem">
+        <div class="promos__row__promo">
 
         </div>
       </div>
-      <div class="block-promo__row">
-        <div class="block-promo__row__elem">
+      <div class="promos__row">
+        <div class="promos__row__promo">
 
         </div>
-        <div class="block-promo__row__elem">
+        <div class="promos__row__promo">
+
+        </div>
+      </div>
+      <div class="promos__row">
+        <div class="promos__row__promo">
+
+        </div>
+        <div class="promos__row__promo">
 
         </div>
       </div>
     </section>
   </main>
-  <footer>
-    <div class="content-block">
+  <footer class="footer">
+    <div class="footer__container">
+      
     </div>
   </footer>
   <script src="./index.js"></script>
